@@ -1,4 +1,8 @@
-﻿shmuel 27.03.2015 14:27:00 +0200 - build 500
+﻿shmuel 30.03.2015 16:43:55 +0200 - build 501
+
+1. LuaFAR: оптимизация по скорости far.MakeMenuItems (и, опосредованно, far.Show).
+
+shmuel 27.03.2015 14:27:00 +0200 - build 500
 
 1. LuaFAR: мелкий рефакторинг.
 
